--- a/nasa-app/package.json
+++ b/nasa-app/package.json
@@ -24,7 +24,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "server": "nodemon ./server/server.js"
+        "server": "node ./server/server.js"
     },
     "eslintConfig": {
         "extends": [
